<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beacon Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="default_beacon_count">0</string>
    <string name="beacon_intro">Beacons Near You:</string>
    <string name="start">Map</string>
    <string name="stop">List</string>
    <string name="toggle_text">Search for Beacons: </string>
    <string name="rssi_label">RSSI:</string>
    <string name="major_label">Major:</string>
    <string name="minor_label">Minor:</string>

    <!-- Map Activity -->
    <string name="title_activity_office_map">Floor Plan</string>

    <!-- Preferences -->
    <string name="pref_behavior_section_title">Settings</string>
    <string name="pref_mode_title">Demo Mode</string>
    <string name="pref_mode_summary">Running in demo mode will pass a variable to the backend. Do you want to run in demo mode?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Dialog Message -->
    <string name="dialog_title">Bluetooth Off</string>
    <string name="dialog_message">To run this app bluetooth needs to be on. Do you want to turn bluetooth on?</string>

</resources>
