<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amha.helloestimote.app.EstimoteActivity">

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_text"
            android:id="@+id/beacon_search_switch"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" android:textOff="No" android:textOn="Yes" android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:onClick="onToggleClicked"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ff949494"
            android:layout_below="@+id/beacon_search_switch" android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" android:id="@+id/view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beacon_intro"
        android:id="@+id/textView"
        android:layout_below="@+id/view" android:layout_alignParentStart="true" android:layout_marginTop="23dp"
        android:textSize="16sp" android:fontFamily="sans-serif-light"/>

    <TextView
        android:text="@string/default_beacon_count"
        android:id="@+id/beacon_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textView" android:layout_alignParentEnd="true" android:textStyle="bold"
        android:editable="true"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ff949494"
            android:id="@+id/view2"
            android:layout_marginTop="22dp" android:layout_below="@+id/beacon_count"
            android:layout_alignParentStart="true"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="beginning"
            android:paddingTop="16dip"
            android:id="@+id/linearLayout">

        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:measureWithLargestChild="true">

            <LinearLayout android:id="@+id/leftSpacer"
                          android:layout_weight="0.25"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />

            <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/stop"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="stopTracking"/>

            <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/start"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="mapButtonClick"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rssi_label"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/view2" android:layout_alignParentStart="true" android:paddingTop="15dp"
            android:focusableInTouchMode="false" android:fontFamily="sans-serif-light"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_beacon_count"
            android:id="@+id/rssi"
            android:layout_alignTop="@+id/view2" android:layout_alignEnd="@+id/view2" android:paddingTop="15dp"
            android:textStyle="bold"/>


    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ff949494"
            android:id="@+id/view3"
            android:layout_below="@+id/textView2" android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_beacon_count"
            android:id="@+id/major_value"
            android:layout_below="@+id/view3"
            android:layout_alignParentEnd="true"
            android:paddingTop="15dp" android:textStyle="bold"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_label"
            android:id="@+id/textView4"
            android:layout_below="@+id/view3"
            android:layout_alignParentStart="true"
            android:paddingTop="15dp" android:fontFamily="sans-serif-light"/>


</RelativeLayout>
